// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTooltipPortal should render correctly 1`] = `
<DocumentFragment>
  <portalv1
    class="bpk-tooltip-portal"
    target="[object Object]"
  >
    <section
      class="bpk-tooltip"
      id="my-tooltip"
      role="dialog"
      tabindex="-1"
    >
      <span
        class="bpk-tooltip__arrow"
        data-popper-arrow="true"
        id="js-bpk-popover-arrow"
        role="presentation"
      />
      <div
        class="bpk-tooltip__inner bpk-tooltip__inner--padded"
      >
        My tooltip content
      </div>
    </section>
  </portalv1>
</DocumentFragment>
`;

exports[`BpkTooltipPortal should render correctly with a custom portal className 1`] = `
<DocumentFragment>
  <portalv1
    class="bpk-tooltip-portal my-custom-class"
    target="[object Object]"
  >
    <section
      class="bpk-tooltip"
      id="my-tooltip"
      role="dialog"
      tabindex="-1"
    >
      <span
        class="bpk-tooltip__arrow"
        data-popper-arrow="true"
        id="js-bpk-popover-arrow"
        role="presentation"
      />
      <div
        class="bpk-tooltip__inner bpk-tooltip__inner--padded"
      >
        My tooltip content
      </div>
    </section>
  </portalv1>
</DocumentFragment>
`;

exports[`BpkTooltipPortal should render correctly with a custom tooltip className 1`] = `
<DocumentFragment>
  <portalv1
    class="bpk-tooltip-portal"
    target="[object Object]"
  >
    <section
      class="bpk-tooltip my-custom-class"
      id="my-tooltip"
      role="dialog"
      tabindex="-1"
    >
      <span
        class="bpk-tooltip__arrow"
        data-popper-arrow="true"
        id="js-bpk-popover-arrow"
        role="presentation"
      />
      <div
        class="bpk-tooltip__inner bpk-tooltip__inner--padded"
      >
        My tooltip content
      </div>
    </section>
  </portalv1>
</DocumentFragment>
`;

exports[`BpkTooltipPortal should render correctly with custom portal style 1`] = `
<DocumentFragment>
  <portalv1
    class="bpk-tooltip-portal"
    style="color: rgb(209, 67, 91);"
    target="[object Object]"
  >
    <section
      class="bpk-tooltip"
      id="my-tooltip"
      role="dialog"
      tabindex="-1"
    >
      <span
        class="bpk-tooltip__arrow"
        data-popper-arrow="true"
        id="js-bpk-popover-arrow"
        role="presentation"
      />
      <div
        class="bpk-tooltip__inner bpk-tooltip__inner--padded"
      >
        My tooltip content
      </div>
    </section>
  </portalv1>
</DocumentFragment>
`;
